[project]
name = "llamalauncher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
markers = [
    "file_errors: Error handling when UI files cannot be loaded",
    "widget_assignment: Widget and layout attribute assignment by objectName",
    "parent_type_setup: Widget setup for different parent widget types",
    "path_support: Path type acceptance",
]

[tool.coverage.run]
source = ["src", "."]
omit = ["tests/**", "**/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90
